src/components/footer/footer.module.css
html {
    font-family: "ARCADE_N", sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

/* body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    font-family: sans-serif;
    color: #fff;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
} */


#footerMain {
    grid-row: 3;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 14px;
    /* background-color: #060606; */
    width: 500px;
    margin: 0 auto;
    bottom: -24px;
}

#retro-logo {
    width: 80px;
    height: auto;
    margin-top: 20px;
}

.socials {
    height: 140px;
    display: flex;
    width: 95%;
    margin: 0;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

footer a {
    text-decoration: none;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 10px;
    width: 54px;
    height: 54px;
}

.logo-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo-container svg {
    height: auto;
    width: 280px;
}

#socials {
    display: flex;
    margin: 0px;
    margin-top: 30px;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

#socials a {
    text-decoration: none;
    color: white;
    /* display: flex; */
    align-items: center;
    justify-content: center;
    margin: 0 10px;
    width: 54px;
    height: 54px;
}

@media only screen and (max-width: 480px) {
    #footerMain {
        width: 300px;
        font-size: 10px;
    }
    #socials a {
        width: 44px;
        height: 44px;
    }
}

